# oj-pratice

./: CMakeLists.txt  HDU1001.cpp  HDU1002.cpp  HDU1003.cpp  HDU1004.cpp  HDU1005.cpp  HDU1007.cpp  HDU1009.cpp  HDU1108.cpp  HDU2037.cpp  HDU2063.cpp  HDU2082.cpp  HDU2084.cpp  HDU2094.cpp  HDU2586.cpp  HDU2602.cpp  HDU2846.cpp  MIOJ0002.cpp  MIOJ0007.cpp  MIOJ0008.cpp  MIOJ0009.cpp  PDDTest.cpp  STLPra.cpp  main.cpp  readme.md  template.cpp
algorithm-template/data-structure/: Fhq-Treap-01.cpp  Fhq-Treap.cpp  Modui.cpp  SegTree-All.cpp  SegTree.cpp  Splay.cpp  Trie.cpp
blog/resource/: 树状数组.graffle
blog/几何/: HDU 1007 Quoit Design.md
blog/动态规划/: 树形DP.md
blog/图/: 树的直径.md
blog/搜索/: BFS和DFS的使用场景.md
blog/数据结构/: 树状数组.md  母函数.md
codeforces/: Array Cancellation.cpp  Balanced Bitstring.cpp  Fixed Point Removal.cpp  Permutation Forgery.cpp  Prison Break.cpp  Sequence Transformation.cpp  Special Permutation.cpp  Tree Tag.cpp  Unique Bid Auction.cpp
hdu/: HDU1000.cpp  HDU1002.cpp  HDU1006.cpp  HDU1008.cpp  HDU1010.cpp  HDU1011.cpp  HDU1012.cpp  HDU1013.cpp  HDU1014.cpp  HDU1015.cpp  HDU1016.cpp  HDU1017.cpp  HDU1018.cpp  HDU1019.cpp  HDU1020.cpp  HDU1021.cpp  HDU1022.cpp  HDU1023.cpp  HDU1024.cpp  HDU1025.cpp  HDU1026.cpp  HDU1027.cpp  HDU1028.cpp  HDU1029.cpp  HDU1030.cpp  HDU1031.cpp  HDU1032.cpp  HDU1033.cpp  HDU1034.cpp  HDU1035.cpp  HDU1036.cpp  HDU1037.cpp  HDU1038.cpp  HDU1039.cpp  HDU1040.cpp  HDU1041.cpp  HDU1058.cpp  HDU1085.cpp  HDU1165.cpp  HDU1284.cpp  (+10 more)
input/: 1575  6470
leetcode/: leet-1317.cpp  leet-1318.cpp  leet-1579.cpp  leet-1642.cpp  leet-1643.cpp  leet-5483.cpp  leet-5493.cpp  leet-5494.cpp  leet-5495.cpp  leet-5496.cpp  leet-5497.cpp  leet-5499.cpp  leet-5500.cpp  leet-5519.cpp  leet-957.cpp  leet-moke1.cpp  leet-moke2.cpp  leet-moke3.cpp  leet-moke4.cpp
luogu/: P1533.cpp  P1886.cpp  P5490.cpp
mioj/: MIOJ0001.cpp  MIOJ0003.cpp  MIOJ0004.cpp  MIOJ0006.cpp
poj/: POJ3264-st.cpp  POJ3264.cpp
special-practice/数论/: combine_num.cpp  ext_gcd.cpp  gcd.cpp  prime.cpp
special-practice/树形DP/: P2014.cpp  P2015.cpp  POJ1985.cpp
zoj/: ZOJ1001.cpp  ZOJ1002.cpp  ZOJ1003.cpp  ZOJ1119.cpp  ZOJ1311.cpp  ZOJ1789.cpp
