cmake_minimum_required(VERSION 3.13)
project(Problems)

set(CMAKE_CXX_STANDARD 98)
add_executable(Problems main.cpp)
add_executable(HDU2846 hdu/HDU2846.cpp)
add_executable(HDU1000 hdu/HDU1000.cpp)
add_executable(HDU1001 hdu/HDU1001.cpp)
add_executable(HDU1002 hdu/HDU1002.cpp)
add_executable(HDU1003 hdu/HDU1003.cpp)
add_executable(HDU1004 hdu/HDU1004.cpp)
add_executable(HDU1005 hdu/HDU1005.cpp)
add_executable(HDU1006 hdu/HDU1006.cpp)
add_executable(HDU1007 hdu/HDU1007.cpp)
add_executable(HDU1008 hdu/HDU1008.cpp)
add_executable(HDU1009 hdu/HDU1009.cpp)
add_executable(HDU1010 hdu/HDU1010.cpp)
add_executable(HDU1011 hdu/HDU1011.cpp)
add_executable(HDU1012 hdu/HDU1012.cpp)
add_executable(HDU1013 hdu/HDU1013.cpp)

add_executable(HDU1285 hdu/HDU1285.cpp)
add_executable(HDU2037 hdu/HDU2037.cpp)
add_executable(HDU2094 hdu/HDU2094.cpp)
add_executable(HDU2084 hdu/HDU2084.cpp)
add_executable(HDU2082 hdu/HDU2082.cpp)
add_executable(HDU2602 hdu/HDU2602.cpp)
add_executable(HDU3466 hdu/HDU3466.cpp)
add_executable(HDU3488 hdu/HDU3488.cpp)
add_executable(HDU1575 hdu/HDU1575.cpp)
add_executable(HDU6470 hdu/HDU6470.cpp)
add_executable(HDU2586 hdu/HDU2586.cpp)
add_executable(HDU6318 hdu/HDU6318.cpp)
add_executable(HDU1284 hdu/HDU1284.cpp)
add_executable(HDU1108 hdu/HDU1108.cpp)

add_executable(MIOJ0001 mioj/MIOJ0001.cpp)
add_executable(MIOJ0002 mioj/MIOJ0002.cpp)
add_executable(MIOJ0003 mioj/MIOJ0003.cpp)
add_executable(MIOJ0004 mioj/MIOJ0004.cpp)
add_executable(MIOJ0006 mioj/MIOJ0006.cpp)
add_executable(MIOJ0007 mioj/MIOJ0007.cpp)
add_executable(MIOJ0008 mioj/MIOJ0008.cpp)
add_executable(MIOJ0009 mioj/MIOJ0009.cpp)

add_executable(P2015 special-practice/树形DP/P2015.cpp)
add_executable(P2014 special-practice/树形DP/P2014.cpp)

add_executable(POJ1985 special-practice/树形DP/POJ1985.cpp)












