cmake_minimum_required(VERSION 3.13)
project(Problems)

set(CMAKE_CXX_STANDARD 98)
add_executable(Problems main.cpp)
add_executable(HDU2846 hdu/HDU2846.cpp)
add_executable(HDU1000 hdu/HDU1000.cpp)
add_executable(HDU1001 hdu/HDU1001.cpp)
add_executable(HDU1002 hdu/HDU1002.cpp)
add_executable(HDU1003 hdu/HDU1003.cpp)
add_executable(HDU1004 hdu/HDU1004.cpp)
add_executable(HDU1005 hdu/HDU1005.cpp)
add_executable(HDU1006 hdu/HDU1006.cpp)
add_executable(HDU1007 hdu/HDU1007.cpp)
add_executable(HDU1008 hdu/HDU1008.cpp)
add_executable(HDU1009 hdu/HDU1009.cpp)
add_executable(HDU1010 hdu/HDU1010.cpp)
add_executable(HDU1011 hdu/HDU1011.cpp)
add_executable(HDU1012 hdu/HDU1012.cpp)
add_executable(HDU1013 hdu/HDU1013.cpp)
add_executable(HDU1014 hdu/HDU1014.cpp)
add_executable(HDU1015 hdu/HDU1015.cpp)
add_executable(HDU1016 hdu/HDU1016.cpp)
add_executable(HDU1017 hdu/HDU1017.cpp)
add_executable(HDU1018 hdu/HDU1018.cpp)
add_executable(HDU1019 hdu/HDU1019.cpp)
add_executable(HDU1020 hdu/HDU1020.cpp)
add_executable(HDU1021 hdu/HDU1021.cpp)
add_executable(HDU1022 hdu/HDU1022.cpp)
add_executable(HDU1023 hdu/HDU1023.cpp)
add_executable(HDU1024 hdu/HDU1024.cpp)
add_executable(HDU1025 hdu/HDU1025.cpp)
add_executable(HDU1026 hdu/HDU1026.cpp)
add_executable(HDU1027 hdu/HDU1027.cpp)
add_executable(HDU1028 hdu/HDU1028.cpp)
add_executable(HDU1029 hdu/HDU1029.cpp)
add_executable(HDU1030 hdu/HDU1030.cpp)
add_executable(HDU1031 hdu/HDU1031.cpp)
add_executable(HDU1032 hdu/HDU1032.cpp)
add_executable(HDU1033 hdu/HDU1033.cpp)
add_executable(HDU1034 hdu/HDU1034.cpp)
add_executable(HDU1035 hdu/HDU1035.cpp)
add_executable(HDU1036 hdu/HDU1036.cpp)
add_executable(HDU1037 hdu/HDU1037.cpp)
add_executable(HDU1038 hdu/HDU1038.cpp)
add_executable(HDU1039 hdu/HDU1039.cpp)
add_executable(HDU1040 hdu/HDU1040.cpp)
add_executable(HDU1041 hdu/HDU1041.cpp)

add_executable(HDU1058 hdu/HDU1058.cpp)

add_executable(HDU1085 hdu/HDU1085.cpp)
add_executable(HDU1285 hdu/HDU1285.cpp)
add_executable(HDU1520 hdu/HDU1520.cpp)
add_executable(HDU2037 hdu/HDU2037.cpp)
add_executable(HDU2094 hdu/HDU2094.cpp)
add_executable(HDU2084 hdu/HDU2084.cpp)
add_executable(HDU2082 hdu/HDU2082.cpp)
add_executable(HDU2602 hdu/HDU2602.cpp)
add_executable(HDU3466 hdu/HDU3466.cpp)
add_executable(HDU3488 hdu/HDU3488.cpp)
add_executable(HDU1575 hdu/HDU1575.cpp)
add_executable(HDU6470 hdu/HDU6470.cpp)
add_executable(HDU2586 hdu/HDU2586.cpp)
add_executable(HDU6318 hdu/HDU6318.cpp)
add_executable(HDU1284 hdu/HDU1284.cpp)
add_executable(HDU1108 hdu/HDU1108.cpp)
add_executable(HDU4632 hdu/HDU4632.cpp)
add_executable(HDU2795 hdu/HDU2795.cpp)
add_executable(HDU1165 hdu/HDU1165.cpp)


add_executable(ZOJ1001 zoj/ZOJ1001.cpp)
add_executable(ZOJ1002 zoj/ZOJ1002.cpp)
add_executable(ZOJ1003 zoj/ZOJ1003.cpp)
add_executable(ZOJ1119 zoj/ZOJ1119.cpp)
add_executable(ZOJ1311 zoj/ZOJ1311.cpp)
add_executable(ZOJ1789 zoj/ZOJ1789.cpp)

add_executable(P2015 special-practice/树形DP/P2015.cpp)
add_executable(P2014 special-practice/树形DP/P2014.cpp)

add_executable(POJ1985 special-practice/树形DP/POJ1985.cpp)

add_executable(gcd_1 special-practice/数论/gcd.cpp)
add_executable(ext_gcd special-practice/数论/ext_gcd.cpp)
add_executable(combine_num special-practice/数论/combine_num.cpp)
add_executable(prime special-practice/数论/prime.cpp)

add_executable(leet-957 leetcode/leet-957.cpp)
add_executable(leet-1317 leetcode/leet-1317.cpp)
add_executable(leet-1318 leetcode/leet-1318.cpp)
add_executable(leet-1579 leetcode/leet-1579.cpp)
add_executable(leet-1642 leetcode/leet-1642.cpp)
add_executable(leet-1643 leetcode/leet-1643.cpp)


add_executable(leet-moke1 leetcode/leet-moke1.cpp)
add_executable(leet-moke2 leetcode/leet-moke2.cpp)
add_executable(leet-moke3 leetcode/leet-moke3.cpp)
add_executable(leet-moke4 leetcode/leet-moke4.cpp)

add_executable(Permutation-Forgery "codeforces/Permutation Forgery.cpp")
add_executable(Array-Cancellation "codeforces/Array Cancellation.cpp")
add_executable(Balanced-Bitstring "codeforces/Balanced Bitstring.cpp")
add_executable(Tree-Tag "codeforces/Tree Tag.cpp")
add_executable(Sequence-Transformation "codeforces/Sequence Transformation.cpp")
add_executable(Special-Permutation "codeforces/Special Permutation.cpp")
add_executable(Unique-Bid-Auction "codeforces/Unique Bid Auction.cpp")
add_executable(Prison-Break "codeforces/Prison Break.cpp")

add_executable(P1886 "luogu/P1886.cpp")
add_executable(P5490 "luogu/P5490.cpp")
add_executable(P1533 "luogu/P1533.cpp")


add_executable(modui algorithm-template/data-structure/Modui.cpp)
add_executable(trie algorithm-template/data-structure/Trie.cpp)
add_executable(segTree algorithm-template/data-structure/SegTree.cpp)
add_executable(segTreeAll algorithm-template/data-structure/SegTree-All.cpp)
add_executable(Rmq-ST algorithm-template/data-structure/Rmq-ST.cpp)
add_executable(Fhq-Treap algorithm-template/data-structure/Fhq-Treap.cpp)
add_executable(Fhq-Treap-01 algorithm-template/data-structure/Fhq-Treap-01.cpp)
add_executable(Splay algorithm-template/data-structure/Splay.cpp)


add_executable(POJ3264 poj/POJ3264.cpp)
add_executable(POJ3264-st poj/POJ3264-st.cpp)

add_executable(template template.cpp)


















